[tool.poetry]
name = "safetydance"
version = "0.1.0"
description = "A typesafe system for defining and composing steps."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
#astor = "^0.8.1"
astor = { git="https://github.com/Quansight/astor.git", branch="issue-174" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
