[tool.poetry]
name = "safetydance"
version = "0.1.0"
description = "A typesafe system for defining and composing steps."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
astor = { git="https://github.com/berkerpeksag/astor.git", rev="6ce175b8fe5890656f05cd0f5af21a32523386fb" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
