[tool.poetry]
name = "safetydance"
version = "0.1.0"
description = "A typesafe system for defining and composing steps."
authors = ["David Charboneau <david@adadabase.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
